--- a/styles-media.css
+++ b/styles-media.css
@@ -143,6 +143,12 @@
 		font-size: 21px;
 	}
 }
+@media (orientation:portrait) {
+	#small-menu {
+		padding-right: 20px;
+	}
+}
+
 @media (max-width: 380px) {
 	#flex-bottom, #flex-top {
 		padding: 0;
