--- a/styles-media.css
+++ b/styles-media.css
@@ -31,7 +31,7 @@
 		    flex-wrap: wrap;
 		-webkit-box-pack: justify;
 		    -ms-flex-pack: justify;
-		        justify-content: space-between;
+		        justify-content: space-around;
 	}
 	#column-center {
 		max-width: 420px;
@@ -41,8 +41,10 @@
 		display: -webkit-box;
 		display: -ms-flexbox;
 		display: flex;
-		min-width: 520px;
+		width: 588px;
 		margin-top: 20px;
+		-ms-flex-pack: distribute;
+		    justify-content: space-around;
 	}
 	#column-right img:first-of-type {
 		margin-right: 20px;
@@ -111,7 +113,7 @@
 	header {
 		height: 50px;
 	}
-	aside {
+	#aside {
 		width: 1000px;
 	}
 	#flex-top {
@@ -132,11 +134,14 @@
 		display: none;
 	}
 }
-@media (max-width: 756px) {
+@media (max-width: 796px) {
 	#column-center {
 		-webkit-box-ordinal-group: 0;
 		    -ms-flex-order: -1;
 		        order: -1;
+	}
+	#column-left {
+		max-width: 420px;
 	}
 }
 @media (max-width: 500px) {	
