--- a/styles.css
+++ b/styles.css
@@ -105,9 +105,7 @@ header {
 }
 
 #clock-new {
-	position: absolute;
-	top: 0;
-	left: 120px;
+	margin: 0 10px;
 	padding-left: 25px;
 	background: url('img/clock.png') no-repeat;
 }
@@ -118,9 +116,6 @@ header {
 	}
 
 #weather-new {
-	position: absolute;
-	top: 0;
-	left: 200px;
 	color: #91919f;
 	padding-left: 35px;
 	padding-bottom: 5px;
@@ -179,11 +174,17 @@ header {
 }
 
 #aside {
-	min-width: 280px;
+	width: 1000px;
 	-webkit-box-ordinal-group: -1;
 	    -ms-flex-order: -2;
 	        order: -2;
 	margin-bottom: 10px;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 }
 
 #column-left {
