--- a/styles-media.css
+++ b/styles-media.css
@@ -158,11 +158,23 @@
 		max-width: 420px;
 	}
 }
+
 @media (max-width: 500px) {	
+	h3 {
+		font-size: 24px;
+	}
+}
+@media (max-width: 380px) {	
 	h3 {
 		font-size: 21px;
 	}
 }
+@media (max-width: 500px) {
+	#castle h3 {
+		width: 300px;
+	}
+}
+
 @media (orientation:portrait) {
 	#small-menu {
 		padding-right: 20px;
@@ -225,10 +237,5 @@
 @media (max-width: 428px) {
 	#post-news {
 		line-height: normal;
-	}
-}
-@media (max-width: 344px) {
-	#castle h3 {
-		width: 300px;
 	}
 }
