--- a/styles.css
+++ b/styles.css
@@ -375,6 +375,9 @@ header {
 	display: flex;
 	-ms-flex-wrap: wrap;
 	    flex-wrap: wrap;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 }
 	
 #special-news-left {
