--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
 @font-face {
-	font-family: ArialMT;
-	src: url(arial.ttf);
+	font-family: 'ArialMT';
+	src: url('Arial/ArialMT.eot?#iefix') format('embedded-opentype'),  
+	url('Arial/ArialMT.woff') format('woff'), 
+	url('Arial/ArialMT.ttf')  format('truetype'), 
+	url('Arial/ArialMT.svg#ArialMT') format('svg');
+	font-weight: normal;
+	font-style: normal;
 }
 
 html, body {
